--- a/additional/first.html
+++ b/additional/first.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://microsoft.github.io/vscode-codicons/dist/codicon.css">
-    <title>Document</title>
+    <title>Documen mmt</title>
     <style>
         * {
             margin: 0;
@@ -138,7 +138,6 @@
             line-height: 24px;
             color: rgb(23, 23, 23);
         }
-        
     </style>
 </head>
 
@@ -160,22 +159,265 @@
                 <!-- <img src="../uba images/imgi_100_internet-1536x995.webp" alt=""> -->
             </div>
         </div>
-        <a class="about-us" href="">About Us <i class="codicon codicon-chevron-down" style="color: black; font-size: 24px; width: 30px;"></i></a>
+        <a class="about-us" href="">About Us <i class="codicon codicon-chevron-down"
+                style="color: black; font-size: 24px; width: 30px;"></i></a>
         <a class="Investors" href="">Investors</a>
         <a class="Impact" href="">Our Impact</a>
         <a class="Media" href="">Media</a>
         <a class="Support" href="">Support</a>
         <a class="Global" href="">Global Reach</a>
     </section>
-    s
-</body>
     <section>
-        <div class="banking">
+        <div class="ash">
+            <div class="stay-fit-div-t">
+                <h1 class="stay-h1">Stay Informed With The Latest Financial Updates</h1>
+            </div>
+            <div class="stay-fit-div">
+                <div class="stay-fit-div-black">
+                    <div class="internal-stay-fit-div">
+                        <h2 class="Latest">Latest News</h2>
+                        <p class="trends">Latest financial news and market trends</p>
+                        <div class="dec-flex">
+                            <p class="dec">1 Dec</p>
+                            <p class="asia">Asia FX steady as Fed cut bets gain steam; yen rises on BOJ hike signals
+                            </p>
+                        </div>
+                        <div class="dec-flex">
+                            <p class="dec">1 Dec</p>
+                            <p class="asia">Dollar braces for crucial December with Fed meeting, Powell’s successor pick
+                            </p>
+                        </div>
 
+                        <div class="dec-flex">
+                            <p class="dec">30 Nov</p>
+                            <p class="asia">An industry focused on death faces an existential crisis</p>
+                        </div>
+                        <div class="dec-flex">
+                            <p class="dec">30 Nov</p>
+                            <p class="asia">Top Wall Street analysts recommend these dividend stocks for stable income
+                            </p>
+                        </div>
+                        <div class="dec-flex">
+                            <p class="dec">30 Nov</p>
+                            <p class="asia">AI could be revolutionary, but don't ‘lose your diversification,' this
+                                wealth advisor says</p>
+                        </div>
+                        <div class="dec-flex">
+                            <p class="dec">30 Nov</p>
+                            <p class="asia">These cheap stocks should have a big 2026, Jefferies says</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="stay-fit-div-black">
+                    <div class="internal-stay-fit-div">
+                        <h2 class="Latest">Customize your Updates</h2>
+                        <p class="trends">Sign up for content that interest you the most</p>
+                        <form action="">
+                            <input maxlength="6" minlength="3" class="full-name" type="text" id="name" name="fullname"
+                                required placeholder="Full Name*">
+                            <input maxlength="6" minlength="3" class="full-name" type="email" id="email" name="fullname"
+                                required placeholder="Email*">
+                            <input maxlength="6" minlength="3" class="full-name" type="text" id="name" name="fullname"
+                                required placeholder="Full Name*">
+                            <h3 class="select">Select your Interests</h3>
+                            <div class="check">
+                                <input class="chackbox" type="checkbox">
+                                <label class="kkk" for="birth">Annual Reports</label>
+                                <input type="checkbox">
+                                <label class="kkk" for="birth">Interim Reports</label>
+                                <input type="checkbox">
+                                <label class="kkk" for="birth">Events</label>
+                            </div>
+
+                            <div class="check">
+                                <input type="checkbox">
+                                <label class="kkk" for="birth">Job Openings</label>
+                                <input type="checkbox">
+                                <label class="kkk" for="birth">Latest News</label>
+                                <input type="checkbox">
+                                <label class="kkk" for="birth">UBA Foundation</label>
+                            </div>
+                            <p class="form-p">By clicking “Continue”, I agree to the <a class="terms" href="">terms and conditions</a>
+                                of use.</p>
+                            <div class="third div">
+                                <a class="third-a" href="">Continue<i class="codicon codicon-chevron-right"
+                                        style="color: #F5F5F5; font-size: 12px;"></i></a>
+                            </div>
+                        </form>
+                    </div>
+
+                </div>
+            </div>
         </div>
     </section>
+</body>
+
+
 </html>
 <!-- 
     .banking{
         
     } -->
+<style>
+    .terms{
+        color: rgb(163, 163, 163);
+    }
+    .stay-fit-div-t {
+        margin: auto;
+        width: 90%;
+    }
+
+    .third {
+        padding-top: 20px;
+    }
+
+    .third-a {
+        font-family: Roboto;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 24px;
+        color: rgb(255, 255, 255);
+        text-decoration: none;
+
+    }
+
+    .third-a::after {
+        content: '';
+        width: 0%;
+        height: 2px;
+        background: red;
+        display: block;
+        transition: 0.5s;
+    }
+
+    .third-a:hover::after {
+        width: 70px;
+    }
+
+    .third-a:hover {
+        color: red;
+        transition: 0.9s;
+    }
+
+    .form-p {
+        font-family: Roboto;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 20px;
+        color: rgb(163, 163, 163);
+        padding-top: 20px;
+    }
+
+    .check {
+        display: flex;
+        padding-top: 10px;
+        gap: 20px;
+    }
+
+
+
+    .kkk {
+        font-family: Roboto;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        color: rgb(212, 212, 212);
+    }
+
+    .select {
+        font-family: "UBA Sans", sans-serif;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 28px;
+        color: rgb(255, 255, 255);
+        padding-top: 20px;
+    }
+
+    .full-name {
+        width: 100%;
+        background-color: #262626;
+        border: none;
+        margin-top: 10px;
+        padding: 10px 0;
+        border-radius: 5px;
+    }
+
+    .ash {
+        background-color: #262626;
+    }
+
+    .stay-fit-div {
+        margin: auto;
+        width: 95%;
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    .stay-h1 {
+        font-family: "UBA Sans", Roboto, sans-serif;
+        font-size: 36px;
+        font-weight: 600;
+        line-height: 44px;
+        color: rgb(255, 255, 255);
+        padding-top: 50px;
+    }
+
+    .stay-fit-div-black {
+        background-color: black;
+        padding: 40px 0;
+        width: 45%;
+        border-radius: 10px;
+    }
+
+    .internal-stay-fit-div {
+        margin: auto;
+        width: 90%;
+    }
+
+    .Latest {
+        font-family: "Encode Sans";
+        font-size: 24px;
+        font-weight: 600;
+        line-height: 32px;
+        color: rgb(250, 250, 250);
+    }
+
+    .trends {
+        font-family: Roboto;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        padding-top: 10px;
+        color: rgb(163, 163, 163);
+    }
+
+    .dec {
+        font-family: Roboto;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 20px;
+        color: rgb(212, 212, 212);
+        /* padding-top: 5px; */
+        text-wrap: nowrap;
+    }
+
+    .asia {
+        font-family: Roboto;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 24px;
+        color: rgb(250, 250, 250);
+        width: 90%;
+        /* border: thick solid rebeccapurple; */
+    }
+
+    .dec-flex {
+        display: flex;
+        gap: 30px;
+        padding-top: 10px;
+    }
+    /* *{
+        background-color: #007bff
+;
+    } */
+</style>
