--- a/additional/leo.html
+++ b/additional/leo.html
@@ -3,127 +3,227 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="leo.css">
     <link rel="stylesheet" href="https://microsoft.github.io/vscode-codicons/dist/codicon.css">
     <title>Document</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
 
-        .banking {
-            /* padding: 10px 0px; */
-            height: 550px;
-            border-radius: 10px;
-            width: 500px;
-            background-color: black;
-        }
-
-        .first-h2 {
-            /* font-family: "Encode Sans";
-            font-size: 24px;
-            font-weight: 600;
-            /* line-height: 32px; */
-            color: rgb(250, 250, 250);
-            padding-top: 5px;
-        }
-
-        .abi {
-            width: 90%;
-            margin: auto;
-        }
-
-        .abi-p {
-            font-family: Roboto;
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 24px;
-            color: rgb(163, 163, 163);
-        }
-
-        .first-a {
-            font-family: Roboto;
-            font-size: 16px;
-            font-weight: 500;
-            line-height: 24px;
-            color: rgb(255, 255, 255);
-            text-decoration: none;
-
-        }
-
-        .first-a::after {
-            content: '';
-            width: 0%;
-            height: 2px;
-            background: red;
-            display: block;
-            transition: 0.5s;
-        }
-
-        .first-a:hover::after {
-            width: 150px;
-        }
-         .first-a:hover{
-            color: red;
-            transition: 0.9s;
-        }
-
-        .second-a {
-            font-family: Roboto;
-            font-size: 16px;
-            font-weight: 500;
-            line-height: 24px;
-            color: rgb(255, 255, 255);
-            text-decoration: none;
-        }
-          .second-a::after {
-            content: '';
-            width: 0%;
-            height: 2px;
-            background: red;
-            color: red;
-            display: block;
-            transition: 0.5s;
-        }
-         .second-a:hover::after {
-            width: 150px;
-        }
-        .second-a:hover{
-            color: red;
-            transition: 0.9s;
-        }
-
-        .container-flex {
-            padding-top: 10px;
-            display: flex;
-            gap: 20px;
-        }
-        .Opening {
-            width: 500px;
-            height: 400px;
-            border: thick solid red;
-            /* margin-top: -150px;
-            margin-left: 520px; */
-        }
     </style>
 </head>
 
 <body>
-    <div class="banking">
-        <div class="abi">
-            <h2 class="first-h2">Online Account Opening</h2>
-            <p class="abi-p">Open an account online in minutes. Access your funds via the UBA Mobile App or any ATM and
-                get real-time notifications after every transaction.</p>
-            <div class="container-flex">
-                <a class="first-a" href="">Personal Banking <i id="right" class="codicon codicon-chevron-right"
-                        style="color: #F5F5F5; font-size: 15px;"></i></a>
-                <a class="second-a" href="">Business Banking <i class="codicon codicon-chevron-right"
-                        style="color: #F5F5F5; font-size: 15px;"></i></a>
+    <div class="leo-flex">
+        <div class="banking">
+            <div class="abi">
+                <h2 class="first-h2">Online Account Opening</h2>
+                <p class="abi-p">Open an account online in minutes. Access your funds via the UBA Mobile App or any ATM
+                    and
+                    get real-time notifications after every transaction.</p>
+                <div class="container-flex">
+                    <a class="first-a" href="">Personal Banking <i class="codicon codicon-chevron-right"
+                            style="color: #F5F5F5; font-size: 15px;"></i></a>
+                    <a class="second-a" href="">Business Banking <i class="codicon codicon-chevron-right"
+                            style="color: #F5F5F5; font-size: 15px;"></i></a>
+                </div>
+            </div>
+            <img class="Opening" src="../uba images/imgi_121_account-opening-1-1024x623.webp" alt="">
+
+        </div>
+        <div class="banking-two">
+            <div class="abi-two">
+                <h2 class="second-h2">Chat with Leo, your 24/7 Virtual Banker</h2>
+                <p class="abi-secondp">Send money, buy airtime, pay bills, check your balance, and do much more with
+                    your smart virtual assistant — Leo.</p>
+                <div class="container-flextwo">
+                    <a class="third-a" href="">Learn more <i class="codicon codicon-chevron-right"
+                            style="color: #F5F5F5; font-size: 12px;"></i></a>
+                </div>
+            </div>
+            <div class="Opening-two-div">
+                <img class="Opening-two" src="../uba images/imgi_124_chat_leo-1024x623.webp" alt="">
+
             </div>
         </div>
-        <img class="Opening"  src="../uba images/imgi_121_account-opening-1-1024x623.webp" alt="">
+
     </div>
 </body>
+<!-- <div class="container-parent">
+    <div class="container">
+        <div class="share-container">
+            <img class="img-one" src="../uba images/download.svg" alt="">
+            <p class="uba-shares"><a class="uba-shares" href="../CONTACT/index.html">UBA Shares</a></p>
+        </div>
+        <div class="share-container">
+            <img class="img-one" src="../uba images/download (3).svg" alt="">
+            <p class="uba-shares">Reports</p>
+        </div>
+        <div class="share-container">
+            <img class="img-one" src="../uba images/download (2).svg" alt="">
+            <p class="uba-shares">News</p>
+        </div>
+        <div class="share-container">
+            <img class="img-one" src="../uba images/download (6).svg" alt="">
+            <p class="uba-shares">Awards</p>
+        </div>
+        <div class="share-container">
+            <img src="../uba images/download (5).svg" alt="">
+            <p class="uba-shares">FAQ</p>
+        </div>
+        <div class="share-container">
+            <img src="../uba images/download (4).svg" alt="">
+            <p class="uba-shares">Leadership</p>
+        </div>
+    </div>
+</div> -->
+<section>
+
+    <div class="dd">
+        <div class="padding-top-div">
+            <div class="margin-top">
+                <div class="main-color-div">
+                    <div class="fit-div">
+                        <div class="find-h2-p">
+                            <h2 class="fit-h2">Find Your Perfect Fit</h2>
+                            <p class="fit-p">What will you be using our website for?</p>
+                        </div>
+                        <div class="indivdual-flex">
+                            <div class="indivdual">
+                                <i class="codicon codicon-home"
+                                    style="color: red; font-size: 90px; margin: auto; width: 90%; "></i>
+                                <p class="indivdual-p">Individual</p>
+                            </div>
+                            <div class="indivdual">
+                                <i class="codicon codicon-terminal-cmd"
+                                    style="color: red; font-size: 90px; margin: auto; width: 90%; "></i>
+                                <p class="indivdual-p">Entrepreneur</p>
+                            </div>
+                            <div class="indivdual">
+                                <i class="codicon codicon-split-horizontal"
+                                    style="color: red; font-size: 90px; margin: auto; width: 90%; "></i>
+                                <p class="indivdual-p">Investor</p>
+                            </div>
+                        </div>
+                        <div class="indivdual-flex">
+                            <div class="indivdual">
+                                <i class="codicon codicon-person"
+                                    style="color: red; font-size: 90px; margin: auto; width: 90%; "></i>
+                                <p class="indivdual-p">Teenager</p>
+                            </div>
+                            <div class="indivdual">
+                                <i class="codicon codicon-symbol-method"
+                                    style="color: red; font-size: 90px; margin: auto; width: 90%; "></i>
+                                <p class="indivdual-p">Student</p>
+                            </div>
+                            <div class="indivdual">
+                                <i class="codicon codicon-organization"
+                                    style="color: red; font-size: 90px; margin: auto; width: 90%; "></i>
+                                <p class="indivdual-p">Developer</p>
+                            </div>
+                        </div>
+                        <div class="indivdual-flex">
+                            <div class="indivdual">
+                                <i class="codicon codicon-repo-clone"
+                                    style="color: red; font-size: 90px; margin: auto; width: 90%; "></i>
+                                <p class="indivdual-p">Job Applicant</p>
+                            </div>
+                            <div class="indivdual">
+                                <i class="codicon codicon-server"
+                                    style="color: red; font-size: 90px; margin: auto; width: 90%; "></i>
+                                <p class="indivdual-p">Media</p>
+                            </div>
+                            <div class="indivdual">
+                                <i class="codicon codicon-rocket"
+                                    style="color: rgb(228, 35, 35); font-size: 90px; margin: auto; width: 90%; "></i>
+                                <p class="indivdual-p">Help</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="padding-top-div-two">
+            <div class="margin-top">
+                <div class="main-color-div-two">
+                    <div class="fit-div">
+                        <h2 class="fit-h2">Share Price Update</h2>
+                        <p class="fit-p">UBA Group's Current Market Performance at a Glance</p>
+                        <div class="share-prize-flex">
+                            <p class="share-prize-p">Share Price</p>
+                            <p class="share-prize-p">null</p>
+                        </div>
+                        <hr class="hr" style="color: blue; font-size: 20px; margin-top: 30px;">
+                        <div class="share-prize-flex-two">
+                            <p class="share-prize-second-p-">Today’s Change</p>
+                            <p class="share-prize-second-p-">0 / 0% </p>
+                        </div>
+                        <hr class="hr" style="color: blue; font-size: 20px; margin-top: 30px;">
+                        <div class="share-prize-flex-three">
+                            <p class="share-prize-p">Shares Traded</p>
+                            <p class="share-prize-second-p-">266.63K</p>
+                        </div>
+                        <hr class="hr" style="color: blue; font-size: 20px; margin-top: 30px;">
+                        <div class="share-prize-flex-four">
+                            <p class="share-prize-second-p-">1 Year Change</p>
+                            <p class="share-prize-second-p-">+43.54%</p>
+                        </div>
+                        <p class="fit-p-two">Data delayed at least 60 minutes as of 29 Nov 2025, 03:11 GMT +1.</p>
+                        <div class="Explore">
+                            <a class="first-a" href="">Explore More Details<i class="codicon codicon-chevron-right"
+                                    style="color: #F5F5F5; font-size: 15px;"></i></a>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="news-div">
+        <h1 class="news-and-views-h1">News and Views</h1>
+        <p class="news-p">Press Releases</p>
+        <div class="ooo">
+            <div class="wrapper">
+                <div>
+                    <img class="wrapper-img" src="../uba images/imgi_14_UBA-NEC-01-768x512.jpg" alt="">
+                </div>
+                <div class="textbox">
+                    <p class="sqi">13-year-old Student, Ebunoluwa Seth, Wins 15th...</p>
+                    <p class="november">November 19, 2025</p>
+                </div>
+            </div>
+            <div class="wrapper">
+                <div>
+                    <img class="wrapper-img" src="../uba images/imgi_15_Oliver-Alawuba-768x512.jpg" alt="">
+                </div>
+                <div class="textbox">
+                    <p class="sqi">UBA GMD: Africa Has Funds For Growth But Needs ...</p>
+                    <p class="november">November 19, 2025</p>
+                </div>
+            </div>
+            <div class="wrapper">
+                <div>
+                    <img class="wrapper-img" src="../uba images/imgi_16_LITF-768x512.jpg" alt="">
+                </div>
+                <div class="textbox">
+                    <p class="sqi">13-year-old Student, Ebunoluwa Seth, Wins 15th...</p>
+                    <p class="november">November 19, 2025</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<div>
+    <input type="checkbox">
+    <label for="">Hiii</label>
+</div>
+<div>
+    <input type="checkbox">
+    <label for="">Hello</label>
+</div>
 
 </html>
