--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./additional/index.css">
     <link rel="stylesheet" href="https://microsoft.github.io/vscode-codicons/dist/codicon.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>UBA - United Bank for Africa</title>
@@ -63,7 +63,7 @@
                                         </div>
                                         <div class="who-we-are">
                                             <div class="ok">
-                                                <a class="who-we-are-h4" href="../strategy/index.html">Our Strategy</a>
+                                                <a class="who-we-are-h4" href="./strategy/index.html">Our Strategy</a>
                                                 <p class="who-we-are-p">At UBA Group, strategy means value for
                                                     customers, shareholders, and communities everywhere we operate.</p>
                                             </div>
@@ -79,7 +79,7 @@
                                         <a class="glo" href="">Africa Day 2024</a>
                                     </div>
                                     <div class="global-presence">
-                                        <a class="glo" href="../header/index.html">Special Projects</a>
+                                        <a class="glo" href="./header/index.html">Special Projects</a>
                                     </div>
                                 </div>
                             </div>
@@ -266,7 +266,7 @@
                     <!-- <img src="../uba images/global.svg" alt="" style="width: 20px; cursor: pointer;"> -->
                 </div>
                 <div class="header-div-two">
-                    <img class="uba-logo" src="../uba images/imgi_97_UBA-Logo.svg" alt="UBA Logo">
+                    <img class="uba-logo" src="./uba images/imgi_97_UBA-Logo.svg" alt="UBA Logo">
                 </div>
             </div>
         </div>
@@ -288,7 +288,7 @@
             <div class="uba-image">
                 <div class="video-placeholder">
                     <video>
-                        <source src="../uba images/United Bank for Africa.mkv" type="">
+                        <source src="./uba images/United Bank for Africa.mkv" type="">
                     </video>
                 </div>
             </div>
@@ -300,27 +300,27 @@
         <div class="all-container">
             <div class="container">
                 <div class="share-container">
-                    <img class="img-one" src="../uba images/download.svg" alt="Shares Icon">
-                    <a class="uba-shares" href="../CONTACT/index.html">UBA Shares</a>
+                    <img class="img-one" src="./uba images/download.svg" alt="Shares Icon">
+                    <a class="uba-shares" href="./CONTACT/index.html">UBA Shares</a>
                 </div>
                 <div class="share-container">
-                    <img class="img-one" src="../uba images/download (3).svg" alt="Reports Icon">
+                    <img class="img-one" src="./uba images/download (3).svg" alt="Reports Icon">
                     <p class="uba-shares">Reports</p>
                 </div>
                 <div class="share-container">
-                    <img class="img-one" src="../uba images/download (2).svg" alt="News Icon">
+                    <img class="img-one" src="./uba images/download (2).svg" alt="News Icon">
                     <p class="uba-shares">News</p>
                 </div>
                 <div class="share-container">
-                    <img class="img-one" src="../uba images/download (6).svg" alt="Awards Icon">
+                    <img class="img-one" src="./uba images/download (6).svg" alt="Awards Icon">
                     <p class="uba-shares">Awards</p>
                 </div>
                 <div class="share-container">
-                    <img src="../uba images/download (5).svg" alt="FAQ Icon">
+                    <img src="./uba images/download (5).svg" alt="FAQ Icon">
                     <p class="uba-shares">FAQ</p>
                 </div>
                 <div class="share-container">
-                    <img src="../uba images/download (4).svg" alt="Leadership Icon">
+                    <img src="./uba images/download (4).svg" alt="Leadership Icon">
                     <p class="uba-shares">Leadership</p>
                 </div>
             </div>
@@ -430,7 +430,7 @@
                                 style="color: #F5F5F5; font-size: 15px;"></i></a>
                     </div>
                 </div>
-                <img class="Opening" src="../uba images/imgi_121_account-opening-1-1024x623.webp" alt="Account Opening">
+                <img class="Opening" src="./uba images/imgi_121_account-opening-1-1024x623.webp" alt="Account Opening">
             </div>
 
             <div class="banking-two">
@@ -444,7 +444,7 @@
                     </div>
                 </div>
                 <div class="Opening-two-div">
-                    <img class="Opening-two" src="../uba images/imgi_124_chat_leo-1024x623.webp"
+                    <img class="Opening-two" src="./uba images/imgi_124_chat_leo-1024x623.webp"
                         alt="Leo Chat Assistant">
                 </div>
             </div>
@@ -459,7 +459,7 @@
             <div class="news-grid">
                 <div class="news-card">
                     <div class="news-image">
-                        <img class="wrapper-img" src="../uba images/imgi_14_UBA-NEC-01-768x512.jpg"
+                        <img class="wrapper-img" src="./uba images/imgi_14_UBA-NEC-01-768x512.jpg"
                             alt="UBA Student Award">
                     </div>
                     <div class="textbox">
@@ -470,7 +470,7 @@
 
                 <div class="news-card">
                     <div class="news-image">
-                        <img class="wrapper-img" src="../uba images/imgi_16_LITF-768x512.jpg" alt="UBA GMD Speech">
+                        <img class="wrapper-img" src="./uba images/imgi_16_LITF-768x512.jpg" alt="UBA GMD Speech">
                     </div>
                     <div class="textbox">
                         <p class="sqi">UBA GMD: Africa Has Funds For Growth But Needs Better Financial Infrastructure
@@ -481,7 +481,7 @@
 
                 <div class="news-card">
                     <div class="news-image">
-                        <img class="wrapper-img" src="../uba images/imgi_15_Oliver-Alawuba-768x512.jpg"
+                        <img class="wrapper-img" src="./uba images/imgi_15_Oliver-Alawuba-768x512.jpg"
                             alt="UBA LITF Event">
                     </div>
                     <div class="textbox">
@@ -603,7 +603,7 @@
     <!-- Partners Section -->
     <section class="partners-section">
         <div class="partners-container">
-            <img class="uba-google-image" src="../uba images/uba google img.png" alt="UBA Google Partners">
+            <img class="uba-google-image" src="./uba images/uba google img.png" alt="UBA Google Partners">
         </div>
     </section>
 
@@ -660,7 +660,7 @@
                     <a href="#" class="footer-link">Self Service</a>
                     <a href="#" class="footer-link">Security Centre</a>
                     <a href="#" class="footer-link">FAQ</a>
-                    <a href="../footer/index.html" class="footer-link">Contact Us</a>
+                    <a href="./footer/index.html" class="footer-link">Contact Us</a>
                     <a href="#" class="footer-link">ATM/Branch Locator</a>
                     <a href="#" class="footer-link">Whistleblowing</a>
                     <a href="#" class="footer-link">Risk Management Policy</a>
@@ -677,8 +677,8 @@
 
                     <h4 class="footer-about-us_1">Get the app</h4>
                     <div class="app-badges">
-                        <img src="../uba images/imgi_26_Mobile-app-store-badge-2.svg" alt="App Store">
-                        <img src="../uba images/imgi_27_playstore.svg" alt="Google Play">
+                        <img src="./uba images/imgi_26_Mobile-app-store-badge-2.svg" alt="App Store">
+                        <img src="./uba images/imgi_27_playstore.svg" alt="Google Play">
                     </div>
                 </div>
             </div>
@@ -699,7 +699,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
 </body>
 
 </html>
